@@ -1,3 +1,9 @@
+2011-10-28    <zag@manzanillo>
+
+	* bl/vl/app/kb_query/map_vid.py
+	(MapVIDApp.resolve_mapping_individual): Changed 
+	behavior: it will skip records that cannot map.
+
 2011-10-28    <simleo@neuron.crs4.it>
 
 	* bl/vl/app/importer/marker_definition.py (Recorder.record):
